[package]
name = "rsgen-avro"
version = "0.16.1"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2024"
description = "Command line and library for generating Rust types from Avro schemas"
keywords = ["avro", "code-generation", "serde"]
repository = "https://github.com/lerouxrgd/rsgen-avro"
license = "MIT"
readme = "README.md"

[dependencies]
apache-avro = { version = "0.18", features = ["derive"] }
clap = { version = "4", features = ["derive"], optional = true }
glob = "0.3"
heck = "0.5"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tempfile = "3"
tera = { version = "1", default-features = false }
thiserror = "2"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_builder = "0.20"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
strip = true

[features]
full = ["build-cli"]
build-cli = ["dep:clap"]

[[bin]]
name = "rsgen-avro"
required-features = ["build-cli"]
